--- a/flex_box/flexbox.html
+++ b/flex_box/flexbox.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="flex_box.css">
+    <!-- <link rel="stylesheet" href="flex_box.css"> -->
+    <link rel="stylesheet" href="flex_boxwrap.css">
+    <meta name="refresh" http-equiv="20">
 </html>
 <body>
-    <h1>hellow world</h1>
+    <div>
+        <h1>hellow world</h1>
+        <h2>FLEX BOX</h2>
+        <h3>Learning Flex box</h3>
+
+    </div>
 </body>
