--- a/flex_box/flexbox.html
+++ b/flex_box/flexbox.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <!-- <link rel="stylesheet" href="flex_box.css"> -->
-    <link rel="stylesheet" href="flex_boxwrap.css">
-    <meta name="refresh" http-equiv="20">
+<meta charset="UTF-8">
+<meta name="viewport" content="width-device-width" initial-scale="1.0">
+<link rel="stylesheet" href="justiy_content.css">
+<meta name="refresh" http-equiv="20">
+
 </html>
+
 <body>
     <div>
         <h1>hellow world</h1>
