--- a/flex_box/basis_property.html
+++ b/flex_box/basis_property.html
@@ -13,7 +13,9 @@
         <h2>FLEX BOX</h2>
         <h3>Learning Flex box</h3>
         <h4>Wrap concept</h4>
-        
+        <h5>Basis property for flex items</h5>
+        <h6>Flex item of basis property</h6>
+
 
     </div>
 </body>
