--- a/flex_box/flexbox.html
+++ b/flex_box/flexbox.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
-<meta name="viewport" content="width-device-width" initial-scale="1.0">
-<link rel="stylesheet" href="justiy_content.css">
+<meta name="viewport" content="width=device-width" initial-scale="1.0">
+<link rel="stylesheet" href="flex_box.css">
 <meta name="refresh" http-equiv="20">
+<script src="javascript/script.js"></script>
 
 </html>
 
