--- a/flex_box/flexbox.html
+++ b/flex_box/flexbox.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width" initial-scale="1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="flex_box.css">
-<meta name="refresh" http-equiv="20">
+<meta http-equiv="refresh" content="50"> 
 <script src="javascript/script.js"></script>
 
 </html>
 
 <body>
     <div>
-        <h1>hellow world</h1>
+        <h1 id="name">hellow world</h1>
         <h2>FLEX BOX</h2>
         <h3>Learning Flex box</h3>
         <h4>Wrap concept</h4>
