--- a/flex_box/flexbox.html
+++ b/flex_box/flexbox.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="flex_box.css">
+<link rel="stylesheet" href="flex_box.css" type="text/css">
 <meta http-equiv="refresh" content="50"> 
-<script src="javascript/script.js"></script>
+<script src="javascript/constructor.js"></script>
 
 </html>
 
