--- a/flex_box/pratice_exercise/practice2.html
+++ b/flex_box/pratice_exercise/practice2.html
@@ -17,12 +17,12 @@ Create a p tag with id "result". Everytime user click add button the added resul
 <body>
     <div>
         <label for="num1">First Number</label><br>
-        <input type="text" id="num1" name="num1" placeholder="enter the number">
+        <input type="text" id="num1" name="num1" placeholder="enter the number" value="">
 
     </div>
     <div>
         <label for="num2">second Number</label><br>
-        <input type="text" id="num2" name="num2" placeholder="enter the second number">
+        <input type="text" id="num2" name="num2" placeholder="enter the second number" value="">
     </div>
     <div>
         <button id="submit" onclick="add_number()">click me</button>
