--- a/flex_box/pratice_exercise/Guess_number.html
+++ b/flex_box/pratice_exercise/Guess_number.html
@@ -7,7 +7,7 @@ Your Score:9 -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale='1.0'>
-    <meta http-equiv="refresh" content="40">
+    <!-- <meta http-equiv="refresh" content="40"> -->
     <link rel="stylesheet" href="gues_number.css">
 
 </head>
