--- a/flex_box/pratice_exercise/onkeyup.html
+++ b/flex_box/pratice_exercise/onkeyup.html
@@ -2,6 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="50" >
+    <style>
+        p{
+            color:green;
+        }
+    </style>
 
 </head>
 <body>
